Fixed dropdown menu behaviour on mobile

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -19,3 +19,7 @@
   display: flex;
   justify-content: space-between;
 }
+
+.navbar .dropdown-menu {
+  position: absolute;
+}
